46
================

22/07/22 Use block elements instead of <br> in adoptable_js
21/07/22 Hebrew translation update (Saggi Neuemann)
19/07/22 Do not look up manufacturer/batch numbers at all if option is off
18/07/22 Annual figures: do not count neuter/spays before datebroughtin
17/07/22 Stop new animals with future intake date appearing on shelter #1150
15/07/22 Fix bug where person chooser not showing similar people during add
15/07/22 Show alerts for unsigned/signed documents on animal records
12/07/22 Fix FTP chdir/recovery path for reconnection in AdoptAPet
12/07/22 Fix partially implemented additional field type for Time
12/07/22 Fix bug where clone_from_template copied the time of DateBroughtIn
08/07/22 ActiveLitterMates wordkey
07/07/22 Fix bug that causes display of SQL interface errors to be delayed
07/07/22 Fix bug using LOGTYPE in reports after refactoring #1096
05/07/22 Restrict the maximum width of the useragent in incoming forms
05/07/22 Visual improvements to default online form template
05/07/22 Use efficient memory cache for collation/receipt sequences #1149
02/07/22 Use utf-8 when writing transaction logs
02/07/22 Set base tag for online forms so that they can be proxied #1147
01/07/22 Do not show the report toolbar for the html_report service call
01/07/22 Prevent hidden pickuplocation on new animal choosing an inactive item
28/06/22 Copy pickupaddress column when cloning an animal
28/06/22 Allow S3 credentials/endpoint to be set as sitedefs #1146
28/06/22 Hide intake time as well as date for non-shelter animals
27/06/22 If size is removed, always send M to PetFinder
24/06/22 Read through disk cache for thumbnail images to avoid reliance on CDN
22/06/22 Highlight bad email addresses in dialog, stop using global error #1138
22/06/22 Refactoring old stuff out of html.py #1145
22/06/22 Refactoring report criteria for consistency #1145
22/06/22 (sm.com) make sure account alias is set correctly when sending email