@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "46u [Fri 22 Jul 08:13:42 BST 2022]"
-BUILD = "07220813"
+VERSION = "46u [Fri 22 Jul 10:54:41 BST 2022]"
+BUILD = "07221054"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
