@@ -1,6 +1,7 @@
 46
 ================
 
+22/07/22 Retry and error notification mechanism for failed S3 PUT #1155
 22/07/22 Use block elements instead of <br> in adoptable_js
 21/07/22 Hebrew translation update (Saggi Neuemann)
 19/07/22 Do not look up manufacturer/batch numbers at all if option is off
